# ducktales

./: .gitignore  README.md  _metadata.yaml  app.py  pond.html  pond.qmd  pyproject.toml  requirements.txt  styles.css
_shiny/: app.py  requirements.txt
shiny/: app.py  core-mwe.py  dbexplorercore.py  dbexplorerquery.py  explorer.py  express-itables-mwe.py  menu.py  querycore.py  requirements.txt  tableshell.py
sqlEditor/: package-lock.json  package.json  pnpm-lock.yaml
sqlEditor/src/: SQLeditor.js  app.py  duckdb-dialect.js  duckdb_keywords.sql  editor.js
