[tool.poetry]
name = "pond"
version = "0.1.0"
description = "SQLMesh duckdb documentation with Quarto"
authors = ["Fred Guth <fredguth@fredguth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.0.0"
shinywidgets = "^0.3.2"
pandas = "^2.2.2"
itables = "^2.1.4"
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
quarto = "^0.1.0"
shinylive = "^0.5.0"
duckdb = "^1.0.0"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
