[tool.poetry]
name = "ducktales"
version = "0.1.0"
description = "SQLMesh duckdb metadata documentation site with Quarto"
authors = ["Fred Guth <fredguth@fredguth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.0.0"
shinywidgets = "^0.3.2"
pandas = "^2.2.2"
itables = "^2.1.4"
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
shinylive = "^0.5.0"
numpy = "^2.0.1"
duckdb = "^1.0.0"
sqlmesh = {extras = ["github"], version = "^0.113.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
